--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 }
 body {
   font-family: "Poppins", sans-serif;
-  font-size: 16 px;
+  font-size: 12 px;
   line-height: 1.5;
   background: #fff;
 }
@@ -144,17 +144,73 @@ img {
   border-radius: 10px;
 }
 
-input {
-  background-color: #b1b2b5;
-  border: none;
-  border-radius: 0 6px 6px 0;
-  height: 30px;
+.form-container{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
-label {
-  background-color: #b1b2b5;
+.swimmer-input{
+  width: 60%;
+  background-color: var(--light-grey);
+  border: none;
+  border-radius: 30px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+label{
+  font-size: small;
+  font-weight: bold;
+  flex: 1;
+}
+
+.divider{
   height: 30px;
-  border-radius: 6px 0 0 6px;
+  width: 2px;
+  background-color: #000;
+  margin: 0 10;
+}
+
+input[type="text"]{
+  flex:2;
+  margin: 3px 20px 3px 10px;
+  border:none;
+  background-color: var(--light-grey);
+}
+
+input[type="text"]:focus{
+  outline:none;
+}
+
+#addSwimmerButton:hover{
+  opacity: 70%;
+
+}
+.delete-button-container{
+  display: flex;
+  align-items: center;
+  margin: 0 20px 10px 0;
+}
+
+.btn-delete{
+  font-size: 2em;
+  font-weight: bold
+  height 30px;
+  line-height: 30px;
+  width: 30px;
+  background-color: red;
+  color: #000;
+  border-radius: 50%;
+  border: none;
+  place-items: center;
+  cursor: pointer;
+  
+}
+.btn-delete:hover {
+  background-color: darkred;
 }
 
 /*Utility Classes*/
