--- a/css/style.css
+++ b/css/style.css
@@ -144,13 +144,13 @@ img {
   border-radius: 10px;
 }
 
-.form-container{
+.form-container {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   align-items: center;
 }
 
-.swimmer-input{
+.swimmer-input {
   width: 60%;
   background-color: var(--light-grey);
   border: none;
@@ -161,58 +161,83 @@ img {
   margin-bottom: 10px;
 }
 
-label{
+label {
   font-size: small;
   font-weight: bold;
   flex: 1;
 }
 
-.divider{
+.divider {
   height: 30px;
   width: 2px;
   background-color: #000;
   margin: 0 10;
 }
 
-input[type="text"]{
-  flex:2;
+input[type="text"] {
+  flex: 2;
   margin: 3px 20px 3px 10px;
-  border:none;
+  border: none;
   background-color: var(--light-grey);
 }
 
-input[type="text"]:focus{
-  outline:none;
+input[type="text"]:focus {
+  outline: none;
 }
 
-#addSwimmerButton:hover{
+#addSwimmerButton:hover {
   opacity: 70%;
-
 }
-.delete-button-container{
+.delete-button-container {
   display: flex;
   align-items: center;
   margin: 0 20px 10px 0;
 }
 
-.btn-delete{
+.btn-delete {
   font-size: 2em;
-  font-weight: bold
-  height 30px;
+  font-weight: bold height 30px;
   line-height: 30px;
   width: 30px;
   background-color: red;
   color: #000;
   border-radius: 50%;
   border: none;
-  place-items: center;
   cursor: pointer;
-  
+  position: absolute;
+  left: calc(80% + 20px);
 }
 .btn-delete:hover {
   background-color: darkred;
 }
 
+.wrapper {
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+.new-one {
+  position: relative;
+}
+.buttons-container {
+  width: 60%;
+  display: inline-flex;
+  justify-content: flex-end;
+}
+.buttons-container > * {
+  margin-left: 5px;
+}
+
+/*Table*/
+.table-container {
+  width: calc(0.6 * 1500px);
+  margin: 0 auto;
+  background-color: #2cd8ff;
+}
+.results-table {
+  border: #000 solid 1px;
+}
 /*Utility Classes*/
 
 .container {
