--- a/css/style.css
+++ b/css/style.css
@@ -233,10 +233,39 @@ input[type="text"]:focus {
 .table-container {
   width: calc(0.6 * 1500px);
   margin: 0 auto;
-  background-color: #2cd8ff;
 }
 .results-table {
-  border: #000 solid 1px;
+  width: 100%;
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  min-width: 400px;
+  border-radius: 10px 10px 0 0;
+  overflow: hidden;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+.results-table thead {
+  height: 70px;
+  background-color: var(--dark-blue);
+  color: var(--white);
+  text-align: left;
+  font-weight: bold;
+}
+.results-table th,
+.results-table td {
+  padding: 12px 15px;
+  border-bottom: solid 1px #e0e0e0;
+  border-collapse: collapse;
+  text-align: left;
+}
+
+.results-table tbody tr:nth-of-type(odd) {
+  background-color: #f3f3f3;
+}
+
+.results-table tbody tr:last-of-type {
+  border-bottom: 4px solid var(--dark-blue);
 }
 /*Utility Classes*/
 
