--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
   margin: 0;
   padding: 0;
 }
+html{
+  scroll-behavior: smooth;
+}
 
 :root {
   --white: #fff;
@@ -36,6 +39,9 @@ img {
 .navbar {
   background: var(--dark-blue);
   padding: 20px;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
 
 .navbar .container {
@@ -144,6 +150,10 @@ img {
   border-radius: 10px;
 }
 
+.input_box2 p {
+  margin: 5px;
+}
+
 .form-container {
   display: flex;
   flex-direction: column;
@@ -223,6 +233,7 @@ input[type="text"]:focus {
 
 #addSwimmerButton {
   align-self: flex-end;
+  margin-right: 10%;
 }
 
 input[type="radio"] {
@@ -346,6 +357,15 @@ input[type="radio"]:hover + label::before {
   margin: 0 auto;
   padding: 0 15px;
 }
+
+.text_seperator {
+  height: 2px;
+  width: 70%;
+  background-color: #2cd8ff;
+  outline: none;
+  margin: 5px auto;
+}
+
 
 /* Buttons */
 .btn {
