--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
 }
-html{
+html {
   scroll-behavior: smooth;
 }
 
@@ -297,6 +297,25 @@ input[type="radio"]:hover + label::before {
 }
 
 /*Table*/
+.spinner {
+  display: none;
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 1s linear infinite;
+  margin: 10px auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .table-container {
   width: calc(0.6 * 1500px);
   margin: 0 auto;
@@ -365,7 +384,6 @@ input[type="radio"]:hover + label::before {
   outline: none;
   margin: 5px auto;
 }
-
 
 /* Buttons */
 .btn {
