Starting place June 2025

--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,27 @@ img {
   object-fit: cover;
   border-radius: 10px;
 }
+/*Tabs*/
+.tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+}
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+}
+.tab button:hover {
+  background-color: #ddd;
+}
+.tab button.active {
+  background-color: #ccc;
+}
 
 /*Input Section*/
 .input_box1 {
