Fixed new swimmer box spawn point

--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,9 @@ img {
 .tab button.active {
   background-color: #ccc;
 }
+.tabcontent {
+  display: none;
+}
 
 /*Input Section*/
 .input_box1 {
