--- a/css/style.css
+++ b/css/style.css
@@ -178,12 +178,47 @@ img {
   margin: 5px;
 }
 
+/* Form stuff */
 .form-container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .swimmer-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.individual-input {
+  padding: 20px;
+  margin: 20px auto;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+.individual-input {
+  margin-bottom: 15px;
+  font-size: 1.2em;
+  color: #333;
+}
+.form-input {
+  margin-bottom: 15px;
+}
+.form-input label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+.form-input input,
+.form-input select {
+  width: 100%;
+  padding: 8px;
+  font-size: 1em;
+  border: 1px solid #bbb;
+  border-radius: 4px;
+}
+.swimmer-container_sc {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -244,8 +279,6 @@ input[type="text"]:focus {
   border-radius: 50%;
   border: none;
   cursor: pointer;
-  position: absolute;
-  left: calc(80% + 20px);
 }
 .btn-delete:hover {
   background-color: darkred;
