--- a/css/style.css
+++ b/css/style.css
@@ -185,24 +185,27 @@ img {
   width: 100%;
   box-sizing: border-box;
 }
-
+.autocomplete-items,
 #autocomplete-club {
   position: absolute;
-
-  top: 100%;
   left: 0;
   width: 100%;
   background: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 }
-
+.autocomplete-items:empty {
+  box-shadow: none;
+}
+.autocomplete-items,
 #autocomplete-club div {
   padding: 8px;
   cursor: pointer;
   transition: 0.2s;
   text-align: left;
 }
+.autocomplete-items div:hover,
+.autocomplete-items div.active,
 #autocomplete-club div:hover,
 #autocomplete-club div.active {
   background-color: #f0f0f0;
@@ -249,14 +252,19 @@ img {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  align-items: flex-start;
 }
 .individual-input {
   position: relative;
   padding: 20px;
+  width: 350px;
   margin: 20px auto;
   border: 1px solid #ccc;
   border-radius: 8px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+.individual-input.collapsed {
+  flex: 0 0 auto;
 }
 .individual-input {
   margin-bottom: 15px;
@@ -340,6 +348,20 @@ input[type="text"]:focus {
 }
 .fa-trash:hover {
   color: darkred;
+  transition: 0.5s;
+}
+.edit-button {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 10px;
+  color: #000;
+  border: none;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+.edit-button:hover {
+  color: grey;
   transition: 0.5s;
 }
 .btn-delete {
