--- a/css/variables.css
+++ b/css/variables.css
@@ -1,7 +1,7 @@
 :root {
   --white: #fff;
-  --light-blue: #2cd8ff;
-  --dark-blue: #000072;
+  --light-blue: #1e99eb;
+  --dark-blue: #002767;
   --black: #000;
   --light-grey: #dadada;
   --dark-grey: #b1b2b5;
@@ -9,7 +9,6 @@
   --confirm-green-hover:#2fa205;
   --delete-red: #f21414;
   --delete-red-hover: #a51616;
-
-
-
+  --pale-blue: #1e99eb;
+  --background:#eefaff;
 }
