--- a/css/base.css
+++ b/css/base.css
@@ -34,35 +34,35 @@ img {
   font-size: 3rem;
   line-height: 1.2;
   font-weight: 600;
-  margin: 40px 0 20px;
+  padding: 40px 0 20px;
 }
 
 .text-xl {
   font-size: 2.2rem;
   line-height: 1.4;
   font-weight: normal;
-  margin: 40px 0 20px;
+  padding: 40px 0 20px;
 }
 
 .text-lg {
   font-size: 1.8rem;
   line-height: 1.4;
   font-weight: normal;
-  margin: 30px 0 20px;
+  padding: 30px 0 20px;
 }
 
 .text-md {
   font-size: 1.2rem;
   line-height: 1.4;
   font-weight: normal;
-  margin: 20px 0 10px;
+  padding: 20px 0 10px;
 }
 
 .text-sm {
   font-size: 0.9;
   line-height: 1.4;
   font-weight: normal;
-  margin: 10px 0 5px;
+  padding: 10px 0 5px;
 }
 
 .text-center {
