--- a/css/form.css
+++ b/css/form.css
@@ -42,82 +42,7 @@
   text-align: center;
 }
 
-/* Filter Bar */
-.filter-toggle{
-  width: 60%;
-  justify-self: center;
-}
-#toggle-filter-btn{
-  width: 100%;
 
-}
-.filter-bar {
-  display: block;
-  width: 60%;
-  margin: 0 auto;
-  flex-direction: column;
-  gap: 10px;
-  position: relative;
-}
-
-#filter-club {
-  width: 100%;
-  margin: 0;
-  padding: 8px;
-  justify-self: left;
-}
-
-.filter-row {
-  display: flex;
-  gap: 10px;
-  flex-wrap: wrap;
-}
-
-.filter-box{
-  border-radius:5px ;
-  flex: 1;
-  padding: 8px;
-  min-width: 100px;
-  box-sizing: border-box;
-  text-decoration: none;
-}
-
-.club-input-wrapper {
-  position: relative;
-  margin-top: 10px;
-  width: 100%;
-  box-sizing: border-box;
-}
-
-.autocomplete-items,
-.autocomplete-club {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  background: white;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
-}
-
-.autocomplete-items:empty {
-  box-shadow: none;
-  display: none;
-}
-
-.autocomplete-items,
-.autocomplete-club div {
-  padding: 8px;
-  cursor: pointer;
-  transition: 0.2s;
-  text-align: left;
-}
-
-.autocomplete-items div:hover,
-.autocomplete-items div.active,
-.autocomplete-club div:hover,
-.autocomplete-club div.active {
-  background-color: #f0f0f0;
-}
 
 
 /*Input Section*/
@@ -159,7 +84,7 @@
   margin: 20px auto;
   border: 1px solid #ccc;
   border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
   margin-bottom: 15px;
   font-size: 1.2em;
   color: #333;
@@ -220,7 +145,7 @@ label {
   margin: 0 10;
 }
 
-input[type="text"] {
+.individual-input input[type="text"] {
   flex: 2;
   margin: 3px 20px 3px 10px;
   border: none;
