--- a/css/form.css
+++ b/css/form.css
@@ -324,3 +324,17 @@ input[type="radio"]:hover + label::before {
 .hidden {
   display: none;
 }
+
+@keyframes input-pulse{
+0%, 50%, 100% {
+  box-shadow: 0 0 0px rgba( 30, 153, 235, 0.4);
+}
+
+25%, 75% {
+  box-shadow: 0 0 30px rgba( 30, 153, 235, 0.8);
+}
+
+}
+.input-pulse{
+  animation: input-pulse 2s ease-out forwards;
+}
