--- a/css/table.css
+++ b/css/table.css
@@ -1,6 +1,6 @@
 /* Table styles */
 
-.table-rows{
+.table-rows {
   display: none;
 }
 table {
@@ -63,26 +63,25 @@ tbody tr:hover {
   color: var(--dark-blue);
   font-size: 1.1em;
 }
-.table-title{
+.table-title {
   width: 60%;
   align-items: center;
-  text-align: center ;
+  text-align: center;
+  margin: 10px;
 }
-#table-row-top{
+#table-row-top {
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 #table-row-mid {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;              
   padding: 10px;
 }
-.mid-tables-wrapper{
+.mid-tables-wrapper {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -91,32 +90,30 @@ tbody tr:hover {
   width: calc(0.6 * 1500px);
   overflow-x: auto;
   margin: 0 auto;
-  flex: 1 1 auto;                   
-  min-width: 200px;        
+  flex: 1 1 auto;
+  min-width: 200px;
   box-sizing: border-box;
 
   padding: 10px;
-
 }
-#table-row-mid .table-container{
+#table-row-mid .table-container {
   max-width: fit-content;
 }
-#table-row-bottom{
+#table-row-bottom {
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 
 .results-table {
   width: 100%;
   border-collapse: collapse;
-  margin: 25px 0;
+  margin: 0;
   font-size: 0.9em;
   min-width: 400px;
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2)
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
 .results-table thead {
@@ -140,13 +137,12 @@ tbody tr:hover {
   font-size: large;
 }
 
-.table-name{
+.table-name {
   cursor: pointer;
   transition: 0.3s ease;
 }
 
-.table-name:hover{
+.table-name:hover {
   color: var(--light-blue);
   transition: 0.3s ease;
 }
-
