--- a/static/css/table.css
+++ b/static/css/table.css
@@ -9,7 +9,6 @@ table {
   margin-bottom: 20px;
 }
 
-th,
 td {
   text-align: left;
   padding: 12px;
@@ -20,6 +19,9 @@ th {
   background-color: var(--dark-blue);
   color: white;
   font-weight: 600;
+  text-align: left;
+  padding: 12px;
+  border-bottom: 1px solid #ddd;
 }
 
 tbody tr:hover {
@@ -136,7 +138,32 @@ tbody tr:hover {
   background-color: var(--background);
   font-size: large;
 }
-
+@media (max-width: 768px) {
+  .table-container {
+    max-width: 60%;
+    padding: 10px 5px ;
+  }
+  .results-table {
+    font-size: 0.8em;
+    max-width: 100%;
+    margin: 0;
+    min-width: 0;
+  }
+  .results-table thead {
+    font-size: medium;
+    height: auto;
+  }
+  .results-table th,
+  .results-table td {
+    padding:  2px;
+    border-top: solid 1px #e0e0e0;
+    border-collapse: collapse;
+    text-align: left;
+    font-size: smaller;
+  }
+  .results-table tr:last-of-type {
+  font-size: medium;
+}
 .table-name {
   cursor: pointer;
   transition: 0.3s ease;
