--- a/static/css/filters.css
+++ b/static/css/filters.css
@@ -184,7 +184,6 @@ input[type="range"]::-webkit-slider-runnable-track {
   border-radius: 3px;
 }
 
-
 .slider-track {
   position: absolute;
   height: 6px;
@@ -211,4 +210,49 @@ input[type="range"]::-webkit-slider-runnable-track {
 
 .filter-text {
   margin: 10px 0 20px 0;
+}
+
+@media (max-width: 768px) {
+  .filter-text {
+    margin: 5px 0 5px 0;
+  }
+  #filter-bar {
+    width: 90%;
+    margin: 0px auto;
+  }
+  #filter-bar.filter-visible {
+    padding: 10px 10px 0px 10px;
+  }
+  .filter-box {
+    padding: 0;
+    margin: 0;
+  }
+  .filter-row {
+    padding: 5px;
+    gap: 6px;
+  }
+  #filter-club {
+    margin: 0px 0;
+    padding: 4px;
+    font-size: small;
+  }
+  .autocomplete-club {
+    font-size: small;
+  }
+  .autocomplete-items {
+    font-size: small;
+    padding: 0;
+  }
+  .gender-filter label {
+    padding: 4px 6px;
+    font-size: small;
+  }
+  .slider-container {
+    padding: 0px;
+  }
+  #apply-filters {
+    padding: 10px;
+    font-size: small;
+    margin: 6px;
+  }
 }
