--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -32,10 +32,6 @@
   margin-right: 10px;
 }
 
-.navbar ul li:last-child a {
-  margin-left: 10px;
-}
-
 .navbar .btn:hover {
   opacity: 0.7;
   color: var(--white);
@@ -53,4 +49,79 @@
   display: flex;
   text-align: center;
   padding: 0 20px;
+}
+.menu-toggle {
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 24px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  z-index: 1001;
+}
+
+.menu-toggle .bar {
+  height: 4px;
+  width: 100%;
+  background-color: var(--background);
+  border-radius: 2px;
+  transition: all 0.3s ease;
+}
+
+/* Animate to X */
+.menu-toggle.active .bar:nth-child(1) {
+  transform: rotate(45deg) translate(5.9px, 8px);
+}
+.menu-toggle.active .bar:nth-child(2) {
+  opacity: 0;
+}
+.menu-toggle.active .bar:nth-child(3) {
+  transform: rotate(-45deg) translate(5.9px, -8px);
+}
+
+@media (max-width: 768px) {
+  .navbar .main-menu ul {
+    flex-direction: column;
+    background-color: var(--light-blue);
+    position: absolute;
+    top: 70px;
+    right: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    transition: max-height 0.3s ease;
+    z-index: 1001;
+    max-height: 0;
+    overflow: hidden;
+    border-radius: 1rem;
+  }
+  .navbar .main-menu ul.active {
+    display: flex;
+    max-height: 500px;
+    padding: 0;
+  }
+  .menu-toggle {
+    display: flex;
+    margin-left: auto;
+  }
+
+  .navbar ul li a:hover {
+    color: var(--light-grey);
+  }
+  .navbar ul li:hover {
+    background-color: #1268a1;
+    opacity: 0.8;
+  }
+  .logo {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
+
+  .main-title {
+    font-size: 1.2rem;
+  }
 }
