--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,3 @@
-
 @import url(base.css);
 @import url(variables.css);
 @import url(layout.css);
@@ -7,4 +6,4 @@
 @import url(navbar.css);
 @import url(table.css);
 @import url(utilities.css);
-@import url(filters.css)
+@import url(filters.css);
