--- a/static/css/hero.css
+++ b/static/css/hero.css
@@ -38,9 +38,25 @@
   border-radius: 0 0 10px 0;
 }
 @media (max-width: 768px) {
+  .hero{
+    flex-direction: column;
+    align-items: stretch;
+  }
   .hero .hero-content {
-    max-width: 60%;
-    padding: 5px;
+    position: static;
+    max-width: 100%;
+    padding: 5px 10px ;
+    margin: 0;
+    border-radius: 0;
+    z-index: auto;
+  }
+  .hero .container{
+    order: 2;
+    padding: 5px 10px;
+  }
+  .hero .container img{
+    object-fit: contain;
+    border-radius: 10px;
   }
   .hero h1 {
     padding: 10px;
