--- a/static/css/table.css
+++ b/static/css/table.css
@@ -140,7 +140,7 @@ tbody tr:hover {
 @media (max-width: 768px) {
   .table-container {
     max-width: 60%;
-    padding: 10px 5px;
+    padding: 10px 2px;
   }
   .results-table {
     font-size: 0.8em;
@@ -162,6 +162,13 @@ tbody tr:hover {
   }
   .results-table tr:last-of-type {
     font-size: medium;
+  }
+
+  #table-row-mid {
+    padding: 4px;
+  }
+  #table-row-mid .table-container {
+    max-width: 180px;
   }
 }
 .table-name {
